# lust

./: Cargo.toml  LICENSE
benchmarks/: README.md  json_parse_loop.lust  lustgex_capture_scan.lust  lustgex_match_scan.lust  manual_split_scan.lust  map_grouping.lust
examples/: 5  audio_test.lust  calculator.lust  cli.lust  compound_assignment_demo.lust  csv_processor.lust  destructuring_demo.lust  destructuring_rest_demo.lust  dict_demo.lust  draw_demo.lust  generate_csv.lust  grid_demo.lust  indexed_loop_demo.lust  json_parse_demo.lust  path_demo.lust  pipe_lambda_demo.lust  prompt_demo.lust  range_loop_demo.lust  reconcile_interactive.lust  reconcile_report.lust  reconcile_sample.txt  snake.lust  std_report_parse_demo.lust  terminal_tracker.lust  tutorial.lust
examples/ide/: README.md  editor_primitives_demo.lust  ide_theme_demo.lust  live_ui_test.lust  lusty.lust  lusty_editor_state_demo.lust  lusty_ide_min.lust  lusty_ide_select_demo.lust  ui_form_demo.lust
examples/roguelike/: combat.lust  constants.lust  cross_mod.lust  engine.lust  entity.lust  main.lust  map.lust  test_cross.lust
examples/test_import/: foo.lust  main.lust
lust_src/: 0  compiler.lust  lexer.lust  lustgex.lust  parser.lust  typecheck.lust
lust_src/std/: README.md  buffers.lust  dispatch.lust  grid.lust  helpers.lust  lustgex.lust  maps.lust  path.lust  strings.lust
scripts/: fuzzer.rs  make_github_dist.sh
src/: compiler_tests_bridge.rs  compiler_tests_selfhost.rs  compiler_tests_vm.rs  ide_shell.rs  lib.rs  lusty.rs  main.rs
src/frontend/: ast.rs  lexer.rs  parser.rs  token.rs  (+1 more)
(+35 files in other folders)
