[package]
name = "lust"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "lust"
path = "src/main.rs"

[[bin]]
name = "fuzzer"
path = "scripts/fuzzer.rs"

[[bin]]
name = "lusty"
path = "src/lusty.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
cpal = "0.16"
rand = "0.8.5"
rustyline = "15.0.0"
serde_json = "1.0"
regex = "1.11"
crossterm = "0.28"
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
rfd = "0.15"
